css/index.css
#heroCarousel {
    top: -25px;
}

.hero-carousel__wrapper .carousel-inner .carousel-caption {
    bottom: 0;
}

.hero-carousel__title {
    position: relative;
    top: -100px;
}

.hero-carousel__title h1 {
    font-size: 4rem;
    font-weight: 200;
}

.hero-carousel__subtitle {
    width: 30%;
    margin-left: 35%;
    position: relative;
    top: -45px;
}

.hero-carousel__paw-divider {
    position: relative;
    top: -80px;
}

.hero-carousel__button .bttn-float.bttn-lg {
    margin-left: 0;
    margin-top: -50px;
    font-size: 24px;
}

.hero-carousel__wrapper .carousel-item-img {
    filter: opacity(80%) brightness(0.8);
}

.carousel-img {
    filter: opacity(80%) brightness(0.8);
    width: 100%;
    height: 26vw;
    background-size: contain;
    background-repeat: no-repeat;
}

.carousel-img-1 {
    background-image: url("img/IndexHero/hero-carousel-1.jpg");
}

.carousel-img-2 {
    background-image: url("img/IndexHero/hero-carousel-2.jpg");
}

.carousel-img-3 {
    background-image: url("img/IndexHero/hero-carousel-3.jpg");
}

.intro-paragraph {
    width: 30%;
    margin-left: 35%;
    margin-top: 60px;
    text-align: justify;
    line-height: 1.75rem;
}

.accent-letter {
    font-size: 36px;
}

.in-home-care__container {
    margin-top: 120px;
    background-color: white;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
}

.col-md.in-home-care__media {
    padding-left: 0;
    padding-right: 0;
}

.in-home-care__text-dog-photo {
    margin-top: 30px;
}

.in-home-care__text-title {
    text-transform: uppercase;
    color: var(--mainBlue);
    text-align: center;
}

.in-home-care__text-title h3 {
    font-size: 24px;
    font-weight: 500;
}

.in-home-care__text-text {
    text-align: center;
    margin-top: 60px;
}

.in-home-care__button .bttn-float.bttn-lg {
    margin-left: 0;
    margin-top: 10px;
    font-size: 24px
}

.services__container {
    margin-top: 120px;
}

.services__title {
    text-transform: uppercase;
    color: var(--mainBlue);
    text-align: center;
    font-size: 40px;
    font-weight: bolder;
}

.services__service-title,
.services__service-text {
    text-align: center;
}

.services__service-title{
    margin-top: 20px;
}

.services__service-text {
    margin-left: 10%;
    margin-top: 40px;
    width: 80%;
}

.services__container .row {
    margin-top: 60px;
}

.services__button .bttn-float.bttn-lg {
    margin-left: 0;
    margin-top: 30px;
    font-size: 16px;
}

.parallax__container {
    margin-top: 180px;
}

.parallax__container .parallax__media {
    background-image: url('img/parallax-img.jpg');
    min-height: 500px;
    width: 100%;

    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.parallax__text {
    height: 500px;
    background-color: rgba(100, 100, 100, 0.4);
    border-radius: 10px;
}

.parallax__text-title {
    padding-top: 20px;
    text-transform: uppercase;
    text-align: center;
    color: white;
    font-size: 40px;
}

.parallax__text .styled-br {
    margin-top: 30px;
    border: 1px solid white;
}

.parallax__text p {
    margin-top: 120px;
    padding-bottom: 10px;
    color: white;
    text-align: center;
    width: 70%;
    margin-left: 15%;
}

.parallax__text .parallax__button .bttn-float.bttn-lg {
    margin-left: 0;
    margin-top: 40px;
    font-size: 20px;
    background-image: none;
    background-color: rgba(0,0,0,0);
    border: 2px solid var(--mainPurple);
}

.parallax__text .parallax__button .bttn-float.bttn-lg:hover {
    background-image: linear-gradient(45deg, var(--mainBlue), var(--mainPurple));
    border: none;
}

.why-choose__container {
    margin-top: 120px;
}

.why-choose__container a {
    font-weight: bolder;
}

.why-choose__title {
    text-transform: uppercase;
    text-align: center;
    font-size: 40px;
    color: #808080;
    margin-bottom: 30px;
}

.why-choose__container .row .col-md {
    height: 350px;
    overflow: hidden;
}

.why-choose__container .row h3 {
    width: 80%;
    height: 57.6px;
    margin-left: 10%;
    margin-top: 10px;
    text-transform: uppercase;
    text-align: center;
    font-size: 1.5rem;
    font-weight: 500;
}

.why-choose__container .styled-br {
    margin-top: 0;
    margin-bottom: 20px;
}

.why-choose__container .row p {
    width: 80%;
    margin-left: 10%;
    text-align: center;
    font-size: 16px;
}

.gallery__container {
    background-image: linear-gradient(45deg, var(--mainPurple), var(--mainBlue));
}

.gallery__title {
    text-transform: uppercase;
    text-align: center;
    font-size: 40px;
    color: #808080;
    margin-top: 120px;
}

.gallery__container .row {
    width: 80%;
    margin-left: 10%;
}

.gallery__container .gallery-button .bttn-float.bttn-lg {
    margin-left: 0;
    margin-bottom: 20px;
    background-image: none;
    background-color: white;
    color: var(--mainPurple);
    position: relative;
    font-size: 18px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
}

.gallery__container .gallery-button .bttn-float.bttn-lg:hover {
    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.8);
}

.gallery__container img {
    border-radius: 10px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.8);
}

.gallery__container-mobile {
    display:none;
}

.ready-to-join__container {
    margin-bottom: 30px;
}

.ready-to-join__container h3 {
    margin-top: 120px;
    text-align: center;
    color: var(--mainBlue);
    font-size: 40px;
}

.ready-to-join__container p {
    margin-top: 60px;
    margin-left: 12.5%;
    margin-bottom: 0;
    text-align: center;
    width: 75%;
}

.ready-to-join__button .bttn-float.bttn-lg {
    margin-top: 10px;
    margin-left: 0;
    position: relative;
    font-size: 20px;
}

@media only screen and (max-width: 1605px) {
    .hero-carousel__title h1 {
        font-size: 3rem;
    }

    .hero-carousel__subtitle h3 {
        font-size: 1.25rem;
    }
}

@media only screen and (max-width: 1400px) {
    .hero-carousel__title h1 {
        font-size: 2.5rem;
    }

    .hero-carousel__subtitle h3 {
        font-size: 1rem;
    }

    .hero-carousel__wrapper .carousel-inner .carousel-caption {
        bottom: -20px;
    }
}

@media only screen and (max-width: 1200px) {
    .hero-carousel__title h1 {
        position: relative;
        top: 20px;
        font-size: 2rem;
    }

    .hero-carousel__subtitle h3 {
        position: relative;
        bottom: 20px;
    }

    .hero-carousel__wrapper .carousel-inner .carousel-caption {
        bottom: -40px;
    }

    .hero-carousel__button .bttn-float.bttn-lg {
        font-size: 1rem;
    }

    .in-home-care__media img {
        width: 100%;
        min-height: 100%;
    }

    .parallax__text p{
        margin-top: 40px;
    }
}

@media only screen and (max-width: 1024px) {
    body {
        font-size: 1rem;
    }

    .intro-paragraph {
    width: 60%;
    margin-left: 20%;
    text-align: center;
    }

    .intro-paragraph p {
        font-size: 1rem;
    }

    .in-home-care__text-text p{
        font-size: 1rem;
    }

    .services__service-text {
        font-size: 1rem;
        min-height: 144px;
    }

    .in-home-care__text img {
        display: none;
    }
}

@media only screen and (max-width: 900px) {
    .carousel-img {
        height: 56vw;
    }

    .carousel-img-1 {
        background-image: url("img/IndexHero/hero-carousel-1-900px.jpg");
    }

    .carousel-img-2 {
        background-image: url("img/IndexHero/hero-carousel-2-900px.jpg");
    }

    .carousel-img-3 {
        background-image: url("img/IndexHero/hero-carousel-3-900px.jpg");
    }

    .hero-carousel__wrapper .carousel-inner .carousel-caption {
        bottom: 30px;
    }

    .hero-carousel__subtitle {
        width: 50%;
        margin-left: 25%;
     }

     .in-home-care__text-text {
         margin-top: 20px;
     }
}

@media only screen and (max-width: 767px) {
    .in-home-care__media img {
        max-width: 100%;
        max-height: 400px;
        display: block;
    }

    .services__container .service-2,
    .services__container .service-3 {
        margin-top: 150px;
    }

    .parallax__text-title {
        font-size: 1.75rem;
    }
    .parallax__text p {
        font-size: 1rem;
    }

    .services__button .bttn-float.bttn-lg {
        margin-top: 0;
        top: 240px;   
    }

    .services__container .service-2, 
    .services__container .service-3 {
        margin-top: 30px;
    }

    .gallery__container {
        display: none;
    }

    .gallery__container-mobile {
        display:block;
        background-image: linear-gradient(45deg, var(--mainBlue), var(--mainPurple));
    }

    .gallery__container-mobile .carousel{
        max-width: 60vw;
        padding: 20px 0;
        margin-left: 20%;
    }

    .gallery__container-mobile .carousel-inner {
        border-radius: 10px;
        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
    }

    .gallery__container-mobile .carousel-control-prev {
        left: -25%;
    }

    .gallery__container-mobile .carousel-control-next {
        right: -25%;
    }

    .gallery__container-mobile .gallery-button a{
        font-size: 1.25rem;
        position: relative;
        margin: 20px 0;
        background-image: none;
        background-color: rgba(0, 0, 0, 0);
        border: 2px solid white;
    }

    .gallery__container-mobile .gallery-button a:hover {
        background-color: white;
        color: var(--mainPurple);
    }

    .ready-to-join__container h3 {
        font-size: 2rem;
    }

    .ready-to-join__container p {
        font-size: 1rem;
        margin-top: 20px;
    }
}

@media only screen and (max-width: 700px) {
    .hero-carousel__wrapper .carousel-inner .carousel-caption {
        bottom: -40px;
    }

}

@media only screen and (max-width: 500px) {
    .hero-carousel__wrapper .carousel-inner .carousel-caption {
        bottom: 0;
    }

    .hero-carousel__title h1 {
        font-size: 1.75rem;
    }

    .hero-carousel__subtitle {
        width: 70%;
        margin-left: 15%;
    }

    .hero-carousel__subtitle h3 {
        font-size: .75rem;
    }

    .carousel-img {
        height: 87vw;
    }

    .carousel-img-1 {
        background-image: url("img/IndexHero/hero-carousel-1-400px.jpg");
    }

    .carousel-img-2 {
        background-image: url("img/IndexHero/hero-carousel-2-400px.jpg");
    }

    .carousel-img-3 {
        background-image: url("img/IndexHero/hero-carousel-3-400px.jpg");
    }

    .intro-paragraph {
        width: 80%;
        margin-left: 10%;
    }

    .in-home-care__text-text p{
        font-size: 1rem;
    }

    .parallax__text p{
        margin-top: 10px;
        margin-left: 5%;
        margin-right: 0;
        width: 90%;
    }

    .parallax__text .parallax__button .bttn-float.bttn-lg{
        margin-top: 20px;
        margin-bottom: 20px;
    }
}

@media only screen and (max-width: 350px) {
    .hero-carousel__subtitle {
        position: absolute;
        left: -999px;
        top: -999px;
    }

    .hero-carousel__paw-divider {
        display: none;
    }

    .parallax__text .parallax__button .bttn-float.bttn-lg{
        display: none;
    }
}

